lintian (2.5.39) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/cruft.pm:
    + [BR] Relax line length for minified javascript.
  * checks/files.desc:
    + [JW] Fix typo.
  * checks/scripts.desc:
    + [JW] Fix typo.
  * checks/systemd.{pm,desc}:
    + [NT] Apply patch from Evgeni Golov to strip ".service" from
      aliases before looking for an init.d service of same name.
      (Closes: #773087)
    + [NT] Apply patch from Evgeni Golov to check that the Alias
      field of .service files ends with .service (as required by
      the systemd.unit specification).  (Closes: #808369)

  * data/binaries/embedded-libs:
    + [JW] Apply patch from James Cowgill to rename "polarssl" as
      "mbedtls".  (Closes: #808050)

  * data/scripts/interpreters:
    + [JW] Add rake as a known interpreter.  Thanks to Cédric Boutillier
      and Pirate Praveen for the bug reports.  (Closes: #795036)

  * data/spelling/corrections*:
    + [JW, AB] Add more corrections.
      Thanks to Paul Wise for patch for one of them.

  * doc/examples/profiles/my-vendor/main.profile:
    + [JW] Fix typo.

  * doc/lintian.xml:
    + [JW] Fix typo.

  * lib/Lintian/Output.pm:
    + [JW] Fix typos.

  * lib/Lintian/Profile.pm:
    + [JW] Fix typo.

  * lib/Lintian/Tags.pm:
    + [JW] Fix typo.
    + [JW] Make it possible to override tags containing "+" characters,
      such as "missing-dependency-on-libstdc++".  Thanks to Andreas
      Beckmann for the bug report.  (Closes: #806504)

  * lib/Test/Lintian.pm:
    + [JW] Fix typo.

  * private/refresh-insserv-data:
    + [JW] Fix typo.

 -- Niels Thykier <niels@thykier.net>  Mon, 16 Nov 2015 20:57:35 +0100

lintian (2.5.38.1) unstable; urgency=medium

  No tags were added or removed

  * checks/binaries.{desc,pm}:
    + [NT] Check for ".debug_str" section in addition to the
      ".debug_line" section to determine if an ELF file contains
      detached debug symbols.
  * checks/cruft.pm: